tests/Ninja/Build/missing-inputs.ninja
# Check the handling of missing inputs.

# Check that we don't build a command with a missing input, and that we properly
# report the exit status as a failure.
#
# RUN: %empty-directory(%t.build)
#
# RUN: cp %s %t.build/build.ninja
# RUN: %{sh-invoke} -c "%{llbuild} ninja build --jobs 1 --chdir %t.build --no-db; echo \"exit code: $?\"" &> %t1.out
# RUN: %{FileCheck} < %t1.out %s
#
# CHECK: error:{{.*}} missing input 'input-1' and no rule to build it
# CHECK-NOT: [1]
# CHECK: exit code: 1

rule CP
     command = cp ${in} ${out}
     description = "${command}"

build output: CP input-1
default output
